--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container-fluid">
             <!-- Nav Bar -->
             <nav class="navbar navbar-expand-lg navbar-dark bg">
-                <a class="navbar-brand" href="">Aryan</a>
+                <a class="navbar-brand" href="">The Aryan</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
