--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
     <!-- Pricing -->
     
     <section id="pricing">
-        <h2>A Plan for Every Dog's Needs</h2>
-        <p>Simple and affordable price plans for your and your dog.</p>
+        <h2>A Plan for Everyone's Needs</h2>
+        <p>Simple and affordable price plans for your needs.</p>
         
         <div class="row">
             <div class="pricing-column col-lg-4 col-md-6">
