--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
                 <div class="carousel-item">
                     <h2 class="testimonial-text">Earlier, I was sober but I see myself drinking a lot now, maybe that's good?</h2>
                     <img class="testimonial-image" src="images/Asmita.jpeg" alt="lady-profile">
-                    <em>Asmita, Pratapgarh</em>
+                    <em>Asmita Upadhyay, Pratapgarh</em>
                 </div>
                 <div class="carousel-item">
                     <h2 class="testimonial-text">I moved to UK</h2>
                     <img class="testimonial-image" src="images/Tyagi.jpeg" alt="lady-profile">
-                    <em>Aaryaman, Ghaziabad</em>
+                    <em>Aaryaman Tyagi, Ghaziabad</em>
                 </div>
                 <div class="carousel-item">
                     <h2 class="testimonial-text">They call me BT kumar for a reason</h2>
@@ -116,12 +116,22 @@
                 <div class="carousel-item">
                     <h2 class="testimonial-text">I am literally the sun and I still feel cold around him</h2>
                     <img class="testimonial-image" src="images/Surya.jpeg" alt="lady-profile">
-                    <em>Surya, Dharamshala</em>
+                    <em>Surya Sharma, Dharamshala</em>
                 </div>
                 <div class="carousel-item">
                     <h2 class="testimonial-text">I'm filing a lawsuit</h2>
                     <img class="testimonial-image" src="images/Eesha.jpeg" alt="lady-profile">
-                    <em>Eesha, Jaipur</em>
+                    <em>Eesha Vij, Jaipur</em>
+                </div>
+                <div class="carousel-item">
+                    <h2 class="testimonial-text">Why are you being passive aggressive</h2>
+                    <img class="testimonial-image" src="images/Ayushi.jpeg" alt="lady-profile">
+                    <em>Ayushi Srivastava, Noida</em>
+                </div>
+                <div class="carousel-item">
+                    <h2 class="testimonial-text">I am jeff</h2>
+                    <img class="testimonial-image" src="images/Tushar.jpeg" alt="lady-profile">
+                    <em>Tushar Singh Manchanda, Noida</em>
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
