--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
             // Prepare the data to send
             const data = {
-                buttonClicked: buttonClicked,
+                "buttonClicked" : buttonClicked
             };
         
             // Send data to AWS API Gateway
